# krkrsdl3

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-linux.sh  build-windows.bat  build_sdl2_msys2.sh  vcpkg-configuration.json  vcpkg.json
android/: README.md
android/app/: AndroidManifest.xml  build.gradle
android/app/res/layout/: layout_gameconfig.xml
android/app/res/values/: strings.xml
cpp/: cmake_main.txt  eventCallbackFun.h  krkrsdl.cpp  krkrsdl_android.cpp  krkrsdl_gl.cpp  krkrsdl_harmony.cpp  krkrsdl_menu.cpp  krkrsdl_tools.cpp
cpp/core/: CMakeLists.txt
cpp/core/archive/: 7zArchive.cpp  TARArchive.cpp  TVPArchive.cpp  TVPArchive.h  TVPStorage.cpp  TVPStorage.h  TextStream.cpp  TextStream.h  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h
cpp/core/archive/minizip/: ioapi.cpp  unzip.c
cpp/core/main/: NativeEventQueue.cpp  NativeEventQueue.h  SystemControl.cpp  SystemControl.h  TVPApplication.cpp  TVPApplication.h  TVPEvent.cpp  TVPEvent.h  TVPSystem.cpp  TVPSystem.h  TVPThread.cpp  TVPThread.h  TVPWindow.h  WindowIntf.cpp  WindowIntf.h
cpp/core/media/font/: CharacterData.cpp  CharacterData.h  FreeTypeFace.h  FreeTypeFontRasterizer.cpp  FreeTypeFontRasterizer.h  FreeTypeImp.cpp  FreeTypeImp.h  PrerenderedFont.cpp  TVPFont.cpp  TVPFont.h
cpp/core/media/graphics/: ComplexRect.cpp  ComplexRect.h  DrawDevice.cpp  DrawDevice.h  LayerBitmap.cpp  LayerBitmap.h  LayerManager.cpp  (+10 more)
cpp/core/msg/: Log.cpp  Log.h  TVPDebug.cpp  TVPDebug.h  TVPMsg.cpp  TVPMsg.h  TVP_msg_inc.h  tvp_msg.h
cpp/core/render/: ComplexRect.cpp  DrawDevice.cpp  LayerBitmap.cpp  LayerManager.cpp  MainWindowLayer.cpp  RenderManager.cpp  RenderManager_sw.cpp  TransIntf.cpp
cpp/core/script/: TVPScript.cpp  TVPScript.h  tjsNativeAsyncTrigger.cpp  tjsNativeAsyncTrigger.h  tjsNativeBasicDrawDevice.cpp  tjsNativeBasicDrawDevice.h  tjsNativeBitmap.cpp  tjsNativeBitmap.h  tjsNativeBitmapLayerTreeOwner.cpp  tjsNativeBitmapLayerTreeOwner.h  tjsNativeCDDASoundBuffer.cpp  tjsNativeCDDASoundBuffer.h  tjsNativeClipboard.cpp  tjsNativeClipboard.h  tjsNativeDebug.cpp  tjsNativeDebug.h  tjsNativeFont.cpp  tjsNativeFont.h  tjsNativeImageFunction.cpp  tjsNativeImageFunction.h  tjsNativeKAGParser.cpp  tjsNativeKAGParser.h  tjsNativeLayer.cpp  tjsNativeLayer.h  tjsNativeMIDISoundBuffer.cpp  tjsNativeMIDISoundBuffer.h  tjsNativeMenuItem.cpp  tjsNativeMenuItem.h  tjsNativePad.cpp  tjsNativePad.h  tjsNativePhaseVocoder.cpp  tjsNativePhaseVocoder.h  tjsNativePlugins.cpp  tjsNativePlugins.h  tjsNativeRect.cpp  tjsNativeRect.h  tjsNativeScript.cpp  tjsNativeScript.h  tjsNativeStorages.cpp  tjsNativeStorages.h  (+10 more)
cpp/core/tjs2/: tjs.cpp  tjs.h  tjsArray.cpp  tjsBinarySerializer.h  tjsByteCodeLoader.cpp  tjsCommHead.h  tjsConfig.cpp  tjsConfig.h  tjsConstArrayData.cpp  tjsConstArrayData.h  tjsDebug.cpp  tjsDebug.h  tjsError.h  tjsError_jp.h  tjsInterCodeExec.cpp  tjsInterCodeExec.h  tjsInterCodeGen.cpp  tjsLex.cpp  tjsMT19937ar-cok.cpp  tjsObject.cpp  tjsOctPack.cpp  tjsRegExp.cpp  tjsScriptBlock.cpp  tjsString.cpp  tjsString.h  tjsTypes.h  tjsUtils.cpp  tjsUtils.h  tjsVariant.cpp  tjsVariant.h  tjsVariantString.cpp
cpp/core/utils/: CharacterSet.cpp  CharacterSet.h  FilePathUtil.h  MiscUtility.cpp  PhaseVocoderDSP.cpp  Random.cpp  Random.h  RingBuffer.h  TVPSettings.cpp  TVPSettings.h  TVPTimer.cpp  TVPTimer.h  TickCount.cpp  TickCount.h  VelocityTracker.cpp
cpp/environ/: CMakeLists.txt  DetectCPU.cpp  KRMovieOverlay.cpp  KRMovieOverlay.h  KeyCodeConv.cpp  MainWindowLayer.cpp  MainWindowLayer.h  Other.cpp  Platform.cpp  Platform.h  PlatformFile.h  PlatformVideo.h  PlatformView.h  TVPConfig.cpp  TVPConfig.h  TVPScreen.h  WaveMixer.cpp  WaveMixer.h  io_public.h  pthread_impl.h
cpp/environ/android/: JniHelper.cpp  JniHelper.h  Platform.cpp  android_core.cpp  android_video.cpp
cpp/environ/gl/: tvpgl.cpp
cpp/environ/harmony/: Platform.cpp
cpp/environ/intel/: tvpgl_sse2.cpp  tvpgl_sse2.h
cpp/environ/linux/: Platform.cpp  TVPScreen.cpp  ioapi.cpp  linux_core.cpp
cpp/environ/math/: MathAlgorithms.h
cpp/environ/pthread/: create.c  pthread.h
cpp/environ/sdl3/: sdl3_audio.cpp  sdl3_dialog.cpp  sdl3_entry.cpp  sdl3_file.cpp  sdl3_input.cpp  sdl3_utils.cpp
cpp/environ/unix/: unix_file.cpp  unix_thread.cpp
cpp/environ/wasm/: wasm_audio.cpp  wasm_audio_al.cpp  wasm_core.cpp  wasm_file.cpp  wasm_video.cpp
cpp/environ/windows/: Platform.cpp  windows_core.cpp  windows_video.cpp
cpp/plugins/: AlphaMovie.cpp  CMakeLists.txt  DrawDeviceD3D.cpp  Extension.cpp  FuncStubs.cpp  LayerExAreaAverage.cpp  LayerExBTOA.cpp  LayerExBase.cpp  LayerExBase.h  LayerExBase.hpp  LayerExImage.cpp  LayerExImage.h  LayerExMovie.cpp  LayerExPerspective.cpp  LayerExRaster.cpp  PackinOne.cpp  TVPPlugin.cpp  TVPPlugin.h  addFont.cpp  csvParser.cpp  dirlist.cpp  expat.cpp  fstat.cpp  getSample.cpp  getabout.cpp  gfxEffect.cpp  json.cpp  kirikiroid2.cpp  motionPlayer.cpp  saveStruct.cpp  scriptsEx.cpp  shrinkCopy.cpp  textrender.cpp  varfile.cpp  win32dialog.cpp  windowEx.cpp  wutcwf.cpp  xp3filter.cpp
cpp/plugins/KAGParserEx/: KAGParserEx.cpp  KAGParserEx.hpp
cpp/plugins/LayerExDraw/: LayerExDraw.cpp
cpp/plugins/emoteplayer/: emotefile.cpp  emotefile.h  emoteplayer.cpp  emoteplayerclass.cpp  emoteplayerclass.h  emoterunner.cpp  emoterunner.h
cpp/plugins/extrans/: extrans.cpp  mosaic.cpp  ripple.cpp  rotatebase.cpp  rotatetrans.cpp  turn.cpp  wave.cpp
cpp/plugins/ncbind/: ncb_invoke.hpp  ncbind.cpp  ncbind.hpp
cpp/plugins/psbfile/: PSB.cpp  PSBData.cpp  PSBFile.cpp  PSBFile.h  PSBMedia.cpp  PSBMedia.h  psbData.cpp  psbMedia.cpp  psbMedia.h
cpp/plugins/psdfile/: psdclass.cpp  psdclass.h  psdclass_loadstream.cpp  psdclass_loadstreambase.cpp  psdfileinit.cpp
cpp/plugins/sqlite3/: xp3_vfs.cpp
cpp/tjs2/: tjsMT19937ar-cok.cpp
emscripten/: wasm_server.py  wasm_shell.html  使用方法.md
vcpkg/ports/7zip/: CMakeLists.txt
vcpkg/ports/ffmpeg/: portfile.cmake
vcpkg/ports/libbpg/: CMakeLists.txt  fix-conflicts.patch  portfile.cmake  x86-remove.patch
vcpkg/triplets/: arm64-android.cmake
(+68 files in other folders)
